mechanic portal update, car history show mechanic comment